sfdx-source/nca-watrs/main/objects/NCA_VATA_Report__c/NCA_VATA_Report__c.object-meta.xml
<CustomObject>
    <label>NCA VATAS Report</label>
    <nameField>
        <displayFormat>VR-{0000000000}</displayFormat>
        <label>NCA VATA Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NCA VATAS Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>