sfdx-source/nca-watrs/main/objects/NCA_VATA_Report__c/fields/Employee_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_First_Name__c</fullName>
    <formula>RIGHT(Employee_Name__c, LEN(Employee_Name__c)-FIND(&quot;,&quot;,Employee_Name__c)-1)
+
RIGHT(User__c, LEN(User__c)-FIND(&quot;,&quot;,User__c)-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee First Name</label>
    <type>Text</type>
</CustomField>