sfdx-source/nca-watrs/main/objects/NCA_VATA_Report__c/fields/Employee_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Last_Name__c</fullName>
    <formula>LEFT(Employee_Name__c, FIND(&quot;,&quot;,Employee_Name__c)-1)
+
LEFT(User__c, FIND(&quot;,&quot;,User__c)-1 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Last Name</label>
    <type>Text</type>
</CustomField>