sfdx-source/nca-watrs/main/objects/NCA_VATA_Report__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employee Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>