sfdx-source/nca-watrs/main/objects/NCA_VATA_Report__c/fields/Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Leave Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>