sfdx-source/nca-watrs/main/objects/NCA_VATA_Report__c/fields/NCA_Time_Record__c.field-meta.xml
<CustomField>
    <fullName>NCA_Time_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NCA Time Record</label>
    <referenceTo>NCA_Time__c</referenceTo>
    <relationshipLabel>NCA VATA Reports</relationshipLabel>
    <relationshipName>NCA_VATA_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>