sfdx-source/nca-watrs/main/objects/NCA_VATA_Report__c/fields/Related_Contact__c.field-meta.xml
<CustomField>
    <fullName>Related_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>NCA VATA Reports</relationshipLabel>
    <relationshipName>NCA_VATA_Reports1</relationshipName>
    <type>Lookup</type>
</CustomField>