sfdx-source/nca-watrs/main/objects/NCA_VATA_Report__c/fields/Related_NCA_Contact__c.field-meta.xml
<CustomField>
    <fullName>Related_NCA_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related NCA Contact</label>
    <referenceTo>NCA_WATRS_Contact__c</referenceTo>
    <relationshipLabel>NCA VATA Reports</relationshipLabel>
    <relationshipName>NCA_VATA_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>