sfdx-source/nca-watrs/main/objects/NCA_VATA_Report__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>