sfdx-source/nca-watrs/main/objects/NCA_VATA_Report__c/fields/Submit_Date__c.field-meta.xml
<CustomField>
    <fullName>Submit_Date__c</fullName>
    <inlineHelpText>Date Format: mm/dd/yyyy</inlineHelpText>
    <label>Submit Date</label>
    <type>Date</type>
</CustomField>