sfdx-source/nca-watrs/main/objects/NCA_VATA_Report__c/fields/TL_Approver__c.field-meta.xml
<CustomField>
    <fullName>TL_Approver__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TL Approver</label>
    <length>100</length>
    <type>Text</type>
</CustomField>