sfdx-source/nca-watrs/main/objects/NCA_VATA_Report__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction</label>
    <length>100</length>
    <type>Text</type>
</CustomField>