sfdx-source/nca-watrs/main/objects/NCA_VATA_Report__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>User</label>
    <length>100</length>
    <type>Text</type>
</CustomField>