sfdx-source/nca-watrs/main/objects/NCA_VATA_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Employee_Name__c</columns>
    <columns>Duplicate_Record__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>